# ai-system

./: .gitignore  README.md
.github/workflows/: deploy.yml
agent-frontend/: ARCHITECTURE.md  api.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-abort.sh  vite.config.ts
agent-frontend/public/: robots.txt  sitemap.xml
agent-frontend/src/: App.tsx  index.css
agent-frontend/src/components/: Button.tsx  ChatInput.tsx  Input.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageSkeleton.tsx  Modal.tsx  Pagination.tsx  ProtectedRoute.tsx  Select.tsx  Sidebar.tsx  Switch.tsx  Table.tsx
agent-frontend/src/hooks/: useDebounce.ts  useDynamicViewportHeight.ts  useLocalChatStorage.ts  useSEO.ts  useSSEChat.ts
agent-frontend/src/pages/: AdminPanel.tsx  AdminUserManagement.tsx  AuthPage.tsx  ChatPage.tsx  LandingPage.tsx
agent-frontend/src/remotion/: MotionLayers.tsx  index.ts  scenes.tsx  useMotionPreferences.ts
agent-frontend/src/schemas/: admin.ts  api.ts  auth.ts  chat.ts  common.ts  conversation.ts  index.ts  localChat.ts
agent-frontend/src/services/: adminApi.ts  api.ts  auth.ts  chat.ts  chatStorage.ts  conversation.ts  sse.ts  sseAbort.ts  sseRecover.ts
agent-frontend/src/types/: index.ts
agent-frontend/src/utils/: structuredData.ts
agent-python/: .env.example  README.md  main.py  pyproject.toml
agent-python/agent/api/v1/: chat.py  health.py  router.py
agent-python/agent/application/agent/: graph.py  nodes.py
agent-python/agent/core/: __init__.py  abort.py  config.py  exceptions.py  logging.py  middleware.py  retry.py  sse.py
agent-python/agent/domain/: entities.py  protocols.py  values.py
agent-python/agent/infrastructure/llm/: deepseek_service.py
agent-python/agent/prompts/: system.py
agent-python/agent/schemas/: chat.py
agent-python/tests/: test_abort.py  test_config.py  test_schemas.py  test_sse.py
java-backend/: README.md  api.md  api.md.bak  pom.xml  test-admin-api.sh
java-backend/docs/: agent-api.md  frontend-api.md  refactor-summary.md  streaming-storage-refactor.md
java-backend/gateway-service/: pom.xml
java-backend/sql/: init.sql
java-backend/src/main/java/com/caius/agent/: AgentApplication.java
java-backend/src/main/java/com/caius/javabackend/: JavaBackendApplication.java
java-backend/src/main/resources/: application-dev.yml  application-prod.yml  application.properties  application.yaml
java-backend/src/test/java/com/caius/agent/: BcryptDbVerifyTest.java  BcryptGenCorrectTest.java  BcryptGenFinalTest.java  BcryptTest.java  (+3 more)
(+78 files in other folders)
